[metadata]
name = face-library
version = 1.1.0
author = Abdelrahman Akram
author_email = a.akram.9821@gmail.com
description = Face Library is an open source package for accurate and real-time face detection and recognition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/a-akram-98/face_lib
project_urls =
    Bug Tracker = https://github.com/a-akram-98/face_lib/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Environment :: Console

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tqdm
    requests[socks]>=2.12.0
    six
    numpy
    opencv-python >=4.5.3
    onnxruntime >= 1.9.0

[options.packages.find]
where = src

[options.package_data]
* = *.onnx